# GPTkms

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  kms-architecture-proposal.md  package.json  pyproject.toml
.codex/: kms.json
.codex/skills/kms-answer-from-wiki/: SKILL.md
.codex/skills/kms-answer-from-wiki/agents/: openai.yaml
.codex/skills/kms-answer-from-wiki/references/: workflow.md
.codex/skills/kms-promote-session-insights/: SKILL.md
.codex/skills/kms-promote-session-insights/agents/: openai.yaml
.codex/skills/kms-promote-session-insights/references/: promotion-guide.md
.codex/skills/kms-save-session-to-kms/: SKILL.md
.codex/skills/kms-save-session-to-kms/agents/: openai.yaml
.codex/skills/kms-save-session-to-kms/references/: workflow.md
.github/workflows/: ci.yml
demo/: index.html
docs/: BROWSER_AUTOMATION.md  INSTALLATION.md  ORIGIN_AND_DIRECTION.md  POSITIONING_AND_LANDSCAPE.md  PUBLISHING_CHECKLIST.md  RELEASE_ROADMAP.md  kms-schema-and-mcp-spec.md
sample_kms/global/: index.md  log.md
sample_kms/global/pages/concepts/: browser-automation-smoke-test-pattern.md  mcp-first-kms-architecture.md
sample_kms/global/pages/workflows/: promotion-gate-rule.md  session-capture-and-promotion-workflow.md
sample_kms/global/raw/: 2026-07-17-kms-session-summary.md
sample_kms/projects/gptkms/: index.md  log.md
scripts/: run_browser_smoke.ps1  run_server.py  save_session_to_kms.py  smoke_test.py  validate_repo.py
src/gptkms_mcp/: __init__.py  kms_store.py  server.py
tests/: browser-smoke.mjs  demo-browser.mjs
(+10 files in other folders)
