[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gptkms-prototype"
version = "0.1.0"
description = "Local-first MCP-backed KMS prototype for Codex and ChatGPT Work"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["PyYAML>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
